change base64 encode method to encodeToString from sun.misc.BASE64Encoder().encode().